samples/_failures_safe/1761461726_304d37_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_612c47dc.c: In function ‘main’:
./samples/SAFE/__tmp_612c47dc.c:169:39: error: missing terminating ' character
  169 |     if (len > 0 && buffer[len - 1] == '\
      |                                       ^~
./samples/SAFE/__tmp_612c47dc.c:169:5: error: expected expression at end of input
  169 |     if (len > 0 && buffer[len - 1] == '\
      |     ^~
./samples/SAFE/__tmp_612c47dc.c:169:5: error: expected declaration or statement at end of input
